--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -382,7 +382,7 @@
 
                         <div class="payment_item">
                             <div class="radion_btn">
-                                <input type="radio" id="f-option5" name="selector"><a href="d:\datn\appview\views\home\checkout.cshtml">d:\datn\appview\views\home\checkout.cshtml</a>
+                                <input type="radio" id="f-option5" name="selector">
                                 <label for="f-option5">Thanh toán(COD)</label>
                                 <div class="check"></div>
                             </div>
